--- a/Project 2/drinkTwo/drinkTwo/Base.lproj/Main.storyboard
+++ b/Project 2/drinkTwo/drinkTwo/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please add ice" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="acf-k4-Nm7">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please make a selection" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="acf-k4-Nm7">
                                 <rect key="frame" x="101" y="20" width="199" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
