--- a/Project 2/week2_assignment/week2_assignment/Base.lproj/Main.storyboard
+++ b/Project 2/week2_assignment/week2_assignment/Base.lproj/Main.storyboard
@@ -98,13 +98,13 @@
                                     <action selector="onClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Tpz-4s-yaF"/>
                                 </connections>
                             </button>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="bD4-Q5-kgn">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="bD4-Q5-kgn">
                                 <rect key="frame" x="20" y="438" width="280" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
-                                    <segment title="grey"/>
-                                    <segment title="Second"/>
-                                    <segment title="green"/>
+                                    <segment title="clouds"/>
+                                    <segment title="orange"/>
+                                    <segment title="denim"/>
                                 </segments>
                                 <connections>
                                     <action selector="onChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="uxZ-3O-Wpg"/>
